# Discord-Advance-Cloner

./: .env  .env.example  LICENSE  README.md  RELEASE_NOTES.md  SETUP.md  build.ps1  build.sh  docker-compose.yml  run.ps1  run.sh
rust/: Cargo.toml  Dockerfile
rust/src/: api.rs  lib.rs  main.rs
ts/: Dockerfile  package-lock.json  package.json  tsconfig.json
ts/src/: index.ts
ts/src/config/: index.ts
ts/src/services/: channels.ts  cloner.ts  emojis.ts  members.ts  messages.ts  roles.ts  threads.ts  webhooks.ts
ts/src/utils/: client.ts  logger.ts  proxy.ts  retry.ts
