[package]
name = "discord-cloner-hybrid"
version = "0.1.0"
edition = "2021"

[dependencies]
twilight-http = "0.17"
twilight-model = "0.17"
tokio = { version = "1.0", features = ["full"] }
tokio-retry = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
name = "discord_cloner_hybrid"
path = "src/lib.rs"

[[bin]]
name = "discord-cloner-hybrid"
path = "src/main.rs"

